--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for='new-task'] {
+label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
@@ -135,11 +135,11 @@ ul#completed-tasks label {
 }
 
 /* Edit Task */
-ul li input[type=text] {
+ul li input[type="text"] {
   display:none
 }
 
-ul li.editMode input[type=text] {
+ul li.editMode input[type="text"] {
   display:inline-block;
   width:224px
 }
