--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   text-align: right;
 }
 
-.header img {
+.header-img {
   width: 100%;
 }
 
@@ -45,22 +45,23 @@
   display: flex;
 }
 
-ul {
+.list {
   margin: 0;
   padding: 0px;
 }
 
-li, 
-h3 {
+.list-item, 
+.title {
   list-style: none;
 }
 
-input,
-button{
+.task-input,
+.task-checkbox,
+.btn {
   outline: none;
 }
 
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -70,14 +71,13 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 
 /* Headings */
 
-h3,
-label[for="new-task"] {
+.title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -87,7 +87,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.task-input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -100,7 +100,7 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.task-input:focus {
   color: #333;
 }
 
@@ -117,7 +117,7 @@ input[type="text"]:focus {
 
 /* Task lists */
 
-li {
+.list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -126,53 +126,53 @@ li {
   align-items: center;
 }
 
-li > * {
+.list-item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.list-item > .task-checkbox {
   margin: 0 10px;
 }
 
-li > label {
+.list-item > .task-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li > input[type="text"] {
+.list-item > .task-input {
   width: 226px;
 }
 
-.delete img {
+.delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.delete img:hover {
+.delete-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed Tasks */
 
-#completed-tasks label {
+#completed-tasks .task-label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 
-ul li input[type="text"] {
+.list-item .task-input {
   display: none;
 }
 
-.edit-mode input[type="text"] {
+.edit-mode .task-input {
   display: inline-block;
   width: 224px;
 }
 
-.edit-mode label {
+.edit-mode .task-label {
   display: none;
 }
